--- a/Resources/Prototypes/Entities/Objects/Fun/Cards/base.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/Cards/base.yml
@@ -8,9 +8,12 @@
     sprite: Objects/Fun/cards.rsi
     state: base
   - type: Bin
+    maxItems: 52
     whitelist:
       tags:
       - Card
+  - type: Shuffle
+  - type: Card
   - type: ContainerContainer
     containers:
       bin-container: !type:Container
